[tool.ruff]
select = ["E", "F", "B"]
#select = ["E", "F", "I", "PL", "I", "B"]
ignore = ["B008"]
fix = true
ignore-init-module-imports = true
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

line-length = 80

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403", "F405", "E501"]
"consts.py" = ["E501"]

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311']
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profilin0g
)/
'''
[tool.isort]
profile = "black"
line_length = 80
#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmodel_crud_utilities"
version = "0.0.1"
authors = [
    { name="Francis Secada", email = "francis.secada@gmail.com" }
]
description = "A set of CRUD utilities to expedite operations with SQLModel"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/fsecada01/SQLModel-CRUD-Utilities"
"Bug Tracker" = "https://github.com/fsecada01/SQLModel-CRUD-Utilities/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["core_requirements.in"]}
optional-dependencies = {dev = { file = ["dev_requirements.in"] }}