[metadata]
name = "SQLModel CRUD Utilities"
version = 0.0.1
author = "Francis Secada"
author_email = "francis.secada@gmail.com"
url = "https://github.com/fsecada01/SQLModel-CRUD-Utilities"
description = "A set of CRUD utilities to expedite operations with SQLModel"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sqlmodel, crud, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
